more prod cof tweaks